--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "chart.js": "^4.4.3"
   }
 }
